[package]
name = "release-dashboard"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["cargo", "terminal_size", "clap_derive", "wrap_help", "derive"] }
colored = "2.0.0"
dotenv = "0.15.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.16"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
